--- a/src/component/Header/style.module.css
+++ b/src/component/Header/style.module.css
@@ -1,6 +1,6 @@
 .header {
   height: 50px;
-  background-color: rgb(255, 218, 149);
+  background-color: var(--lightOrange);
   display: flex;
   justify-content: left;
   border-radius: 5px;
@@ -15,9 +15,8 @@
 
 .header_content > a {
   text-decoration: none;
-
   color: black;
-  background-color: rgb(255, 204, 109);
+  background-color: var(--lightOrange);
   padding: 7px;
   display: flex;
   justify-content: center;
