--- a/src/pages/Detail/style.module.css
+++ b/src/pages/Detail/style.module.css
@@ -16,3 +16,20 @@
 input:focus {
   outline: 2px solid var(--lightOrange);
 }
+
+.detail_body {
+  display: flex;
+  justify-content: space-around;
+}
+.region_name {
+  /* padding: 10px; */
+  margin: 20px 0px;
+  font-size: 2rem;
+  font-weight: 600;
+
+}
+
+.year_select {
+  display: flex;
+  justify-content: space-around;
+}
