--- a/src/component/Header/style.module.css
+++ b/src/component/Header/style.module.css
@@ -17,7 +17,7 @@
 .header_content > a {
   text-decoration: none;
   color: black;
-  background-color: var(--lightOrange);
+  /* background-color: var(--lightOrange); */
   padding: 7px;
   display: flex;
   justify-content: center;
